--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kroncache-node",
-  "version": "0.0.1",
+  "name": "kroncache",
+  "version": "0.0.2",
   "description": "kroncache node client",
   "main": "./lib/index.js",
   "scripts": {
@@ -31,5 +31,8 @@
     "@types/ms": "^0.7.31",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0"
-  }
+  },
+  "files": [
+    "lib"
+  ]
 }
