--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "kroncache",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "kroncache node client",
   "main": "./lib/index.js",
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
-    "watch": "tsc -p ./tsconfig.json -w"
+    "watch": "tsc -p ./tsconfig.json -w",
+    "test": "jest",
+    "prepublish": "yarn test",
+    "prebuild": "yarn test"
   },
   "repository": {
     "type": "git",
@@ -30,9 +33,13 @@
     "ws": "^7.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/ms": "^0.7.31",
     "@types/uuid": "^8.3.0",
-    "@types/ws": "^7.4.0"
+    "@types/ws": "^7.4.0",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   },
   "files": [
     "lib"
